text-decorations should not be propagated to floating, absolutely or fixed positioned decendants https://bugs.webkit.org/show_bug.cgi?id=18611

Reviewed by Darin Adler.

Source/WebCore:

Previously text-decorations were propagated to all child elements,
but they should not be propagated to out-of-flow descendants,
i.e. floating, absolutely or fixed positioned elements.

The spec says "text decorations are not propagated to any out-of-flow descendants":
http://www.w3.org/TR/2011/WD-css3-text-20110901/#decoration

Test: fast/css/text-decoration-in-descendants.html

* rendering/RenderObject.cpp:
(WebCore::RenderObject::getTextDecorationColors):

LayoutTests:

The added test checks that text-decorations are not propagated to out-of-flow
descendants, i.e. floating, absolutely or fixed positioned elements.

The spec says "text decorations are not propagated to any out-of-flow descendants":
http://www.w3.org/TR/2011/WD-css3-text-20110901/#decoration

* fast/css/text-decoration-in-descendants-expected.html: Added.
* fast/css/text-decoration-in-descendants.html: Added.
* platform/chromium-linux/fast/repaint/focus-layers-expected.png: Updated the test result.
* platform/mac/fast/repaint/focus-layers-expected.png: Ditto.


git-svn-id: svn://svn.chromium.org/blink/trunk@104907 bbb929c8-8fbe-4397-9dbb-9b2b20218538